perf: 优化命令性能